--- a/resources/assets/css/config.css
+++ b/resources/assets/css/config.css
@@ -14,6 +14,10 @@
     border: solid 0.5px white !important;
 }
 
+.small-box {
+    background-color: white;
+}
+
 .bg-secundario {
     background-color: var(--secondario);
     color: white;
